--- a/ESurvey.WebUI/Views/Shared/_Layout.cshtml
+++ b/ESurvey.WebUI/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/angular")
+    @Scripts.Render("~/bundles/angularUi")
+    @Scripts.Render("~/bundles/angularApp")
     @RenderSection("scripts", required: false)
 </body>
 </html>
