--- a/ESurvey.WebUI/Views/Home/UserProfile.cshtml
+++ b/ESurvey.WebUI/Views/Home/UserProfile.cshtml
@@ -94,7 +94,7 @@
                                             return;
                                         }
                                         //REDIRECT
-                                        window.location.href = "/Editor/" + res.Data.Id;
+                                        window.location.href = "/Editor/EditSurvey/" + res.Data.Id;
                                     },
                                     error: function(data) {
                                      
