--- a/ESurvey.WebUI/Views/Shared/_Layout.cshtml
+++ b/ESurvey.WebUI/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/angularUi")
     @Scripts.Render("~/bundles/angularApp")
+    @Scripts.Render("~/bundles/editorApp");
     @RenderSection("scripts", required: false)
 </body>
 </html>
