--- a/ESurvey.WebUI/Views/Editor/EditSurvey.cshtml
+++ b/ESurvey.WebUI/Views/Editor/EditSurvey.cshtml
@@ -14,6 +14,10 @@
             <survey-details-editor></survey-details-editor>
         </div>
 
+        <div ng-controller="questionListController" ng-init="init()">
+            <question-list-dir></question-list-dir>
+
+        </div>
 
 
     </div>
