--- a/ESurvey.WebUI/Views/Editor/_QuestionListTemplate.cshtml
+++ b/ESurvey.WebUI/Views/Editor/_QuestionListTemplate.cshtml
@@ -7,7 +7,7 @@
                 {{quest.Title}}&nbsp;
             <div class="btn-group">
                 <button type="button" class="btn btn-warning">Edit</button>
-                <button type="button" class="btn btn-danger">X</button>
+                <button type="button" class="btn btn-danger" ng-click="pendingDelete(quest.Id)">X</button>
             </div>
         </li>
     </ul>
