--- a/ESurvey.WebUI/Views/Editor/EditSurvey.cshtml
+++ b/ESurvey.WebUI/Views/Editor/EditSurvey.cshtml
@@ -18,16 +18,16 @@
                 <div class="col-md-6">
                     <question-list-dir></question-list-dir>
                 </div>
-
-                <div class="col-md-2">
-                    <div ng-controller="questionCreatorController" ng-init="init()">
-                        <create-question-directive></create-question-directive>
-                    </div>
+            </div>
+            <div class="col-md-2">
+                <div ng-controller="questionCreatorController" ng-init="init()">
+                    <create-question-directive></create-question-directive>
                 </div>
             </div>
+
         </div>
 
-        <div ng-view></div>
+        <div  class="col-md-10"ng-view></div>
 
     </div>
 </div>
