--- a/ESurvey.WebUI/Views/Editor/_MultiSelectEditor.cshtml
+++ b/ESurvey.WebUI/Views/Editor/_MultiSelectEditor.cshtml
@@ -1,20 +1,53 @@
 ﻿<div class="panel panel-default container-fluid">
     <div class="panel-heading">
         <div class="row">
-            <div class="col-xs-2"><h3 class="panel-title"><b>Q:{{EditedDetails.Number}} {{EditedDetails.Title}}  {{TypeName}}</b></h3></div>
+            <div class="col-xs-2"><h3 class="panel-title"><b>Q:{{EditedDetails.Number}} {{EditedDetails.Title}}  {{TNamr}}</b></h3></div>
             <div class="col-xs-10"><a href="#" class="btn btn-success pull-right">Close</a></div>
         </div>
     </div>
     <div class="panel-body">
         <div class="row">
-            <form novalidate class="simple-form col-lg-8" >
-                Name: <input type="text" ng-model="EditedDetails.Title"/><br/>
+            <form novalidate class="simple-form col-lg-8">
+                Title: <input type="text" ng-model="EditedDetails.Title"/><br/>
                 <input type="checkbox" ng-model="EditedDetails.IsHidden">Hidden<br/>
                 <input type="checkbox" ng-model="EditedDetails.AllowMultiple">Allow Multiple<br/>
                 <input type="checkbox" ng-model="EditedDetails.RequriedAnswer">Require Answer<br/>
                 <input type="checkbox" ng-model="EditedDetails.OtherAnswer" ng-change="toggleOtherAnswer()">OtherAnswer<br/>
                 <button ng-click="SendDetails()">Save</button>
             </form>
+        </div>
+        <br/>
+        <br />
+        <div ng-controller="multiAnswerController" ng-init="init(@ViewBag.Id)">
+
+            <ul>
+                <li ng-repeat="ans in answers ">
+
+                    <input type="text" ng-model="ans.Title" ng-blur="Rename(ans)"/>
+                    <button class="btn btn-danger" ng-click="DeleteAnswer(ans.Id)">X</button>
+
+                </li>
+
+
+
+                
+
+            </ul>
+            <hr/>
+            <li ng-show="QuestionDetails.OtherAnswer">
+                Other <input type="text" disabled />
+            </li>
+            <div class="row">
+
+                <div class="col-md-4">
+                    <button class="btn btn-success" ng-click="CreateAnswer()">Create</button>
+                </div>
+
+
+
+            </div>
+            
+        
         </div>
     </div>
 </div>
