--- a/ESurvey.WebUI/Views/Editor/_OpenEditor.cshtml
+++ b/ESurvey.WebUI/Views/Editor/_OpenEditor.cshtml
@@ -1,17 +1,19 @@
-﻿<div class="panel panel-default container-fluid">
+﻿<br /><hr />
+<div class="panel panel-default container-fluid">
     <div class="panel-heading">
         <div class="row">
-            <div class="col-xs-2"><h3 class="panel-title"><b>Q:{{EditedDetails.Number}} {{EditedDetails.Title}} {{TypeName}}</b></h3></div>
-            <div class="col-xs-4"><a href="#" class="btn btn-success pull-right">Close</a></div>
+            <div class="col-md-10"><h3 class="panel-title"><b>Question: {{EditedDetails.Number}} {{EditedDetails.Title}} {{TypeName}}</b></h3></div>
+            <div class="col-md-2"><a href="#" class="btn btn-success pull-right">Close</a></div>
         </div>
     </div>
     <div class="panel-body">
         <div class="row">
-            <form novalidate class="simple-form col-lg-8">
-                Name: <input type="text" ng-model="EditedDetails.Title" /><br />
+            <form novalidate class="simple-form col-md-7">
+                <h4>Title:</h4> <input class="form-control" type="text" ng-model="EditedDetails.Title" /><br />
                 <input type="checkbox" ng-model="EditedDetails.IsHidden">Hidden<br />
                 <input type="checkbox" ng-model="EditedDetails.RequriedAnswer">Require Answer<br />
-                <button ng-click="SendDetails()">Save</button>
+                <hr />
+                <button class="btn btn-lg btn-success pull-right" ng-click="SendDetails()">Save</button>
             </form>
         </div>
     </div>
