--- a/ESurvey.WebUI/Views/Home/_CreateSurveyForm.cshtml
+++ b/ESurvey.WebUI/Views/Home/_CreateSurveyForm.cshtml
@@ -3,11 +3,11 @@
 
 
 <div id="CreateForm">
-<h1> Enter your survey name</h1>
+<h3> Enter your survey name</h3>
     @Html.LabelFor(m => m.Title)
     @Html.EditorFor(m=>m.Title)
-    <button type="button" id="SubmitForm" value="button">Submit</button>
-    <button type="button" id="CancelForm" value="button">Cancel</button>    
+    <button class="btn btn-default" type="button" id="SubmitForm" value="button">Submit</button>
+    <button class="btn btn-default" type="button" id="CancelForm" value="button">Cancel</button>    
  </div>
 
 
