--- a/ESurvey.WebUI/Views/Editor/SurveyDetailsForm.cshtml
+++ b/ESurvey.WebUI/Views/Editor/SurveyDetailsForm.cshtml
@@ -1,18 +1,16 @@
 ﻿<div>
 
     <div>
-        {{surveyDetailsEdited.Title}}<br />
-        {{surveyDetailsEdited.Id}}<br />
-        {{surveyDetailsEdited.OwnerId}}<br />
+        <h4>{{surveyDetailsEdited.Title}}</h4>
+        <h4>{{surveyDetailsEdited.Title}}</h4>
+        <h4>{{surveyDetailsEdited.Title}}</h4>
+        <h4>{{surveyDetailsEdited.Id}}</h4>
+        <h4>{{surveyDetailsEdited.OwnerId}}</h4>
     </div>
-        
-    <form class="form-group">
-        Title: <input type="text" ng-model="surveyDetailsEdited.Title" /><br />
-        <input type="button" ng-click="refreshSurveyDetails()" value="Reset" />
-        <input type="submit" ng-click="sendSurveyDetails()" value="Save"/>
-        <br />
-  
-        
-
-    </form>
+    <div class="form-inline">
+        <label for="titleInput"><h4>Title: </h4></label>
+        <input type="text" class="form-control" id="titleInput" ng-model="surveyDetailsEdited.Title">
+        <button type="submit" class="btn btn-default" ng-click="refreshSurveyDetails()">Reset</button>
+        <button type="submit" class="btn btn-default" ng-click="sendSurveyDetails()">Save</button>
+    </div>
 </div>
