--- a/ESurvey.WebUI/Views/Editor/_MultiSelectEditor.cshtml
+++ b/ESurvey.WebUI/Views/Editor/_MultiSelectEditor.cshtml
@@ -1,49 +1,37 @@
-﻿<div class="panel panel-default container-fluid">
+﻿<br /><hr />
+<div class="panel panel-default container-fluid">
     <div class="panel-heading">
         <div class="row">
-            <div class="col-xs-2"><h3 class="panel-title"><b>Q:{{EditedDetails.Number}} {{EditedDetails.Title}}  {{TNamr}}</b></h3></div>
-            <div class="col-xs-10"><a href="#" class="btn btn-success pull-right">Close</a></div>
+            <div class="col-md-10"><h3 class="panel-title"><b>Question: {{EditedDetails.Number}} {{EditedDetails.Title}}  {{TNamr}}</b></h3></div>
+            <div class="col-md-2"><a href="#" class="btn btn-success pull-right">Close</a></div>
         </div>
     </div>
     <div class="panel-body">
-        <div class="row">
-            <form novalidate class="simple-form col-lg-8">
-                Title: <input type="text" ng-model="EditedDetails.Title"/><br/>
+        <div class="col-md-7">
+            <form novalidate class="simple-form ">
+                <h4>Title:</h4> <input class="form-control" type="text" ng-model="EditedDetails.Title"/><br/>
                 <input type="checkbox" ng-model="EditedDetails.IsHidden">Hidden<br/>
                 <input type="checkbox" ng-model="EditedDetails.AllowMultiple">Allow Multiple<br/>
                 <input type="checkbox" ng-model="EditedDetails.RequriedAnswer">Require Answer<br/>
                 <input type="checkbox" ng-model="EditedDetails.OtherAnswer" ng-change="toggleOtherAnswer()">OtherAnswer<br/>
-                <button ng-click="SendDetails()">Save</button>
             </form>
+            <button class="btn btn-lg btn-success pull-right" ng-click="SendDetails()">Save</button>
         </div>
        
-        <div class="row" ng-controller="multiAnswerController" ng-init="init(@ViewBag.Id)">
-
-            <ul>
-                <li ng-repeat="ans in answers ">
-
-                    <input type="text" ng-model="ans.Title" ng-blur="Rename(ans)"/>
-                    <button class="btn btn-danger" ng-click="DeleteAnswer(ans.Id)">X</button>
-
-                </li>
-
-
-
-                <li ng-show="QuestionDetails.OtherAnswer">
-                    Other <input type="text" disabled />
-                </li>    
-
-            </ul>
-            <hr/>
-            
-
-
-                <div class="col-md-4">
-                    <button class="btn btn-success" ng-click="CreateAnswer()">Create</button>
+        <div class="col-md-5" ng-controller="multiAnswerController" ng-init="init(@ViewBag.Id)">
+            <div class="form-horizontal">
+                <h4>Answers:</h4>
+                <div class="form-inline" ng-repeat="ans in answers ">
+                    <input class="form-control" type="text" ng-model="ans.Title" ng-blur="Rename(ans)" />
+                    <button class="btn btn-sm btn-danger" ng-click="DeleteAnswer(ans.Id)">X</button>
                 </div>
+                <button class="btn btn-default text-center" ng-click="CreateAnswer()">Add answer</button>
             </div>
-            
-        
+            <hr />
+            <div ng-show="QuestionDetails.OtherAnswer">
+                <h4>Other:</h4> <input class="form-control" type="text" disabled />
+            </div>
         </div>
+    </div>
 </div>
 
