--- a/ESurvey.WebUI/Views/Editor/_QuestionListTemplate.cshtml
+++ b/ESurvey.WebUI/Views/Editor/_QuestionListTemplate.cshtml
@@ -1,17 +1,17 @@
 ﻿<div>
-    <h1>QlistTEmplate</h1>
+    <h3>QlistTEmplate</h3>
     <ul class="container">
        
         <li ng-repeat="quest in questionList | orderBy:'Number'">
-
-            Q<span editable-select="quest.Number" onaftersave="setQuestionNumber(quest)" e-ng-options="q.num as q.num for q in numbers">{{quest.Number}}</span>&nbsp;
+            Question <span editable-select="quest.Number" onaftersave="setQuestionNumber(quest)" e-ng-options="q.num as q.num for q in numbers">{{quest.Number}}</span>&nbsp;
             <span editable-text="quest.Title" onbeforesave="renameQuestion(quest, $data)">{{quest.Title}}</span>&nbsp;
-            <div class="btn-group" align="right" >
-                <a class="btn btn-warning" align="right" href="#/EditQuestion/{{quest.Id}} ">EdiQt</a>
-                <a class="btn btn-warning" align="right" href="#/answer">Ans</a>
-                <button type="button" class="btn btn-warning">Edit</button>
+            <div class="btn-group pull-right">
+                <a class="btn btn-default" align="right" href="#/EditQuestion/4{{quest.Id}} ">Edit Question</a>
+                <a class="btn btn-default" align="right" href="#/answer">Answers</a>
+                <button type="button" class="btn btn-default">Edit</button>
                 <button type="button" class="btn btn-danger" ng-click="pendingDelete(quest.Id)">X</button>
             </div>
+            <hr />
         </li>
     </ul>
 </div>
