--- a/ESurvey.WebUI/Views/Editor/_OpenEditor.cshtml
+++ b/ESurvey.WebUI/Views/Editor/_OpenEditor.cshtml
@@ -3,7 +3,7 @@
     <div class="panel-heading">
         <div class="row">
             <div class="col-md-10"><h3 class="panel-title"><b>Question: {{EditedDetails.Number}} {{EditedDetails.Title}} {{TypeName}}</b></h3></div>
-            <div class="col-md-2"><a href="#" class="btn btn-success pull-right">Close</a></div>
+            <div class="col-md-2"><a href="#" class="btn btn-default pull-right">Close</a></div>
         </div>
     </div>
     <div class="panel-body">
@@ -12,8 +12,8 @@
                 <h4>Title:</h4> <input class="form-control" type="text" ng-model="EditedDetails.Title" /><br />
                 <input type="checkbox" ng-model="EditedDetails.IsHidden">Hidden<br />
                 <input type="checkbox" ng-model="EditedDetails.RequriedAnswer">Require Answer<br />
+                <button class="btn btn-default" ng-click="SendDetails()">Save</button>
                 <hr />
-                <button class="btn btn-lg btn-success pull-right" ng-click="SendDetails()">Save</button>
             </form>
         </div>
     </div>
